--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/assets/img/favicon.png" rel="icon">
-  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,13 +18,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../public//vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../public//vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../public//vendor/aos/aos.css" rel="stylesheet">
+  <link href="../public//vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../public//vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <!-- Main CSS File -->
-  <link href="/css/main.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Tour
@@ -40,7 +40,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="/index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="/assets/img/logo.webp" alt=""> -->
         <h1 class="sitename">WordlAgency</h1>
@@ -48,7 +48,7 @@
 
        <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="/pages/about.html">Sobre Nosotros</a></li>
           <li><a href="/pages/destinations.html">Destinos</a></li>
           <li><a href="/pages/tours.html">Tours</a></li>
@@ -73,7 +73,7 @@
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li class="current">About</li>
           </ol>
         </nav>
@@ -97,7 +97,7 @@
         <div class="row align-items-center mb-5">
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="300">
             <div class="hero-image">
-              <img src="/assets/img/travel/showcase-7.webp" class="img-fluid" alt="Travel Adventure">
+              <img src="../assets/img/travel/showcase-7.webp" class="img-fluid" alt="Travel Adventure">
               <div class="floating-stats">
                 <div class="stat-item">
                   <span class="number">50+</span>
@@ -247,7 +247,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="/index.html" class="d-flex align-items-center">
+          <a href="../index.html" class="d-flex align-items-center">
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
@@ -300,17 +300,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/vendor/php-email-form/validate.js"></script>
-  <script src="/vendor/aos/aos.js"></script>
-  <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../public/vendor/php-email-form/validate.js"></script>
+  <script src="../public/vendor/aos/aos.js"></script>
+  <script src="../public/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../public/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../public/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="./public/js/main.js"></script>
+  <script src="../public/js/main.js"></script>
 
 </body>
 
