--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/assets/img/favicon.png" rel="icon">
-  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../public/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="/css/main.css" rel="stylesheet">
+  <link href="/..css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Tour
@@ -36,12 +36,12 @@
   ======================================================== -->
 </head>
 
-<body class="contact-page">
+<body class="destinations-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="/index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="/assets/img/logo.webp" alt=""> -->
         <h1 class="sitename">WordlAgency</h1>
@@ -49,7 +49,7 @@
 
        <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="/pages/about.html">Sobre Nosotros</a></li>
           <li><a href="/pages/destinations.html">Destinos</a></li>
           <li><a href="/pages/tours.html">Tours</a></li>
@@ -139,7 +139,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="/index.html" class="d-flex align-items-center">
+          <a href="../index.html" class="d-flex align-items-center">
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
@@ -193,17 +193,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/vendor/php-email-form/validate.js"></script>
-  <script src="/vendor/aos/aos.js"></script>
-  <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../public/vendor/php-email-form/validate.js"></script>
+  <script src="../public/vendor/aos/aos.js"></script>
+  <script src="../public/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../public/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../public/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="./public/js/main.js"></script>
+  <script src="../public/js/main.js"></script>
 
 </body>
 
