--- a/frontend/pages/tours.html
+++ b/frontend/pages/tours.html
@@ -8,9 +8,9 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <!-- Favicons -->
-  <link href="/assets/img/favicon.png" rel="icon">
-  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<!-- Favicons -->
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../public/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="/css/main.css" rel="stylesheet">
+  <link href="/..css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Tour
@@ -36,20 +36,20 @@
   ======================================================== -->
 </head>
 
-<body class="tours-page">
+<body class="destinations-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="/index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="/assets/img/logo.webp" alt=""> -->
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
- <nav id="navmenu" class="navmenu">
+       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="/pages/about.html">Sobre Nosotros</a></li>
           <li><a href="/pages/destinations.html">Destinos</a></li>
           <li><a href="/pages/tours.html">Tours</a></li>
@@ -65,6 +65,7 @@
     </div>
   </header>
 
+
   <main class="main">
 
     <!-- Page Title -->
@@ -74,7 +75,7 @@
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li class="current">Tours</li>
           </ol>
         </nav>
@@ -164,7 +165,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-15.webp" alt="Bali Adventure" class="img-fluid">
+                  <img src="../assets/img/travel/tour-15.webp" alt="Bali Adventure" class="img-fluid">
                       <div class="tour-badge">Best Seller</div>
                     </div>
                     <div class="tour-content">
@@ -181,7 +182,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-22.webp" alt="Paris Romance" class="img-fluid">
+                  <img src="../assets/img/travel/tour-22.webp" alt="Paris Romance" class="img-fluid">
                       <div class="tour-badge">Luxury</div>
                     </div>
                     <div class="tour-content">
@@ -198,7 +199,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-8.webp" alt="Tokyo Culture" class="img-fluid">
+                  <img src="../assets/img/travel/tour-8.webp" alt="Tokyo Culture" class="img-fluid">
                       <div class="tour-badge">New</div>
                     </div>
                     <div class="tour-content">
@@ -215,7 +216,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-14.webp" alt="Norwegian Fjords" class="img-fluid">
+                  <img src="../assets/img/travel/tour-14.webp" alt="Norwegian Fjords" class="img-fluid">
                       <div class="tour-badge">Popular</div>
                     </div>
                     <div class="tour-content">
@@ -232,7 +233,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-7.webp" alt="Egyptian Adventure" class="img-fluid">
+                  <img src="../assets/img/travel/tour-7.webp" alt="Egyptian Adventure" class="img-fluid">
                       <div class="tour-badge">Cultural</div>
                     </div>
                     <div class="tour-content">
@@ -249,7 +250,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-19.webp" alt="Costa Rica Adventure" class="img-fluid">
+                  <img src="../assets/img/travel/tour-19.webp" alt="Costa Rica Adventure" class="img-fluid">
                       <div class="tour-badge">Adventure</div>
                     </div>
                     <div class="tour-content">
@@ -266,7 +267,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-2.webp" alt="Greek Islands" class="img-fluid">
+                  <img src="../assets/img/travel/tour-2.webp" alt="Greek Islands" class="img-fluid">
                       <div class="tour-badge">Summer Special</div>
                     </div>
                     <div class="tour-content">
@@ -283,7 +284,7 @@
                 <div class="swiper-slide">
                   <div class="featured-tour-card">
                     <div class="tour-image">
-                  <img src="/assets/img/travel/tour-25.webp" alt="Patagonia Trek" class="img-fluid">
+                  <img src="../assets/img/travel/tour-25.webp" alt="Patagonia Trek" class="img-fluid">
                       <div class="tour-badge">Extreme</div>
                     </div>
                     <div class="tour-content">
@@ -311,7 +312,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="tour-card">
                   <div class="tour-image">
-                    <img src="/assets/img/travel/tour-3.webp" alt="Swiss Alps" class="img-fluid">
+                    <img src="../assets/img/travel/tour-3.webp" alt="Swiss Alps" class="img-fluid">
                     <div class="tour-price">$749</div>
                   </div>
                   <div class="tour-content">
@@ -328,7 +329,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="tour-card">
                   <div class="tour-image">
-                    <img src="/assets/img/travel/tour-11.webp" alt="Iceland" class="img-fluid">
+                    <img src="../assets/img/travel/tour-11.webp" alt="Iceland" class="img-fluid">
                     <div class="tour-price">$1199</div>
                   </div>
                   <div class="tour-content">
@@ -345,7 +346,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="tour-card">
                   <div class="tour-image">
-                    <img src="/assets/img/travel/tour-18.webp" alt="Morocco" class="img-fluid">
+                    <img src="../assets/img/travel/tour-18.webp" alt="Morocco" class="img-fluid">
                     <div class="tour-price">$899</div>
                   </div>
                   <div class="tour-content">
@@ -362,7 +363,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="tour-card">
                   <div class="tour-image">
-                    <img src="/assets/img/travel/tour-5.webp" alt="Peru" class="img-fluid">
+                    <img src="../assets/img/travel/tour-5.webp" alt="Peru" class="img-fluid">
                     <div class="tour-price">$1399</div>
                   </div>
                   <div class="tour-content">
@@ -379,7 +380,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="tour-card">
                   <div class="tour-image">
-                    <img src="/assets/img/travel/tour-26.webp" alt="Vietnam" class="img-fluid">
+                    <img src="../assets/img/travel/tour-26.webp" alt="Vietnam" class="img-fluid">
                     <div class="tour-price">$679</div>
                   </div>
                   <div class="tour-content">
@@ -396,7 +397,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="tour-card">
                   <div class="tour-image">
-                    <img src="/assets/img/travel/tour-13.webp" alt="Australia" class="img-fluid">
+                    <img src="../assets/img/travel/tour-13.webp" alt="Australia" class="img-fluid">
                     <div class="tour-price">$1799</div>
                   </div>
                   <div class="tour-content">
@@ -423,7 +424,7 @@
       <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="/index.html" class="d-flex align-items-center">
+          <a href="../index.html" class="d-flex align-items-center">
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
@@ -478,17 +479,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/vendor/php-email-form/validate.js"></script>
-  <script src="/vendor/aos/aos.js"></script>
-  <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../public/vendor/php-email-form/validate.js"></script>
+  <script src="../public/vendor/aos/aos.js"></script>
+  <script src="../public/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../public/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../public/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="./public/js/main.js"></script>
+  <script src="../public/js/main.js"></script>
 
 </body>
 
